# farcal-engine

./: .clang-format  CMakeLists.txt  CMakePresets.json  readme.md
include/: q_lit.hpp
include/farcal/app/: Application.hpp
include/farcal/luavm/: AttachedProcessContext.hpp  LuaBindings.hpp  LuaVmBase.hpp
include/farcal/memory/: MemoryReader.hpp  ProcessMemoryScanner.hpp  RttiScanner.hpp  StringScanner.hpp
include/farcal/ui/: AttachProcessDialog.hpp  InfoWindow.hpp  LogWindow.hpp  Logger.hpp  LoopWriteManagerWindow.hpp  LoopWriteTypes.hpp  LuaVmOutputWindow.hpp  LuaVmWindow.hpp  MainWindow.hpp  MemoryViewerWindow.hpp  RttiWindow.hpp  SettingsTypes.hpp  SettingsWindow.hpp  StringsWindow.hpp  StructureDissectorWindow.hpp
src/: main.cpp
src/app/: Application.cpp
src/luavm/: AttachedProcessContext.cpp  GlmBindingSections.hpp  GlmMatrixBindings.cpp  GlmQuaternionBindings.cpp  GlmTypeBindings.cpp  GlmVectorBindings.cpp  LuaVmBase.cpp  MemoryReadBindings.cpp
src/memory/: ProcessMemoryScanner.cpp
src/ui/: AttachProcessDialog.cpp  InfoWindow.cpp  LogWindow.cpp  Logger.cpp  LoopWriteManagerWindow.cpp  LuaVmOutputWindow.cpp  LuaVmWindow.cpp  MainWindow.cpp  MemoryViewerWindow.cpp  RttiWindow.cpp  SettingsWindow.cpp  StringsWindow.cpp  StructureDissectorWindow.cpp
